to csv 이름 오타 수정 : 210404

--- a/firstDataPreprocessing.ipynb
+++ b/firstDataPreprocessing.ipynb
@@ -73,7 +73,7 @@
         "import missingno as msno"
       ],
       "id": "hqIMIuiOMC4V",
-      "execution_count": 270,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
         "drive.mount('/content/gdrive')"
       ],
       "id": "MJGC7RivNFms",
-      "execution_count": 410,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
         "time_power.head(10)"
       ],
       "id": "nQ3cFFxYMC4W",
-      "execution_count": 411,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1118,7 +1118,7 @@
         "final_time_power = pd.DataFrame(columns=['windForce'])"
       ],
       "id": "zTuOIUnKMC4X",
-      "execution_count": 412,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1136,7 +1136,7 @@
         "print(final_time_power)"
       ],
       "id": "0ZZMdCoLMC4X",
-      "execution_count": 413,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1163,7 +1163,7 @@
         "        #print(time_power[i][j])"
       ],
       "id": "rnsfPtiNMC4Y",
-      "execution_count": 414,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1176,7 +1176,7 @@
         "final_time_power1 = final_time_power.copy()"
       ],
       "id": "yHnYxFgLMC4d",
-      "execution_count": 415,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1188,7 +1188,7 @@
         "#test.to_csv(\"time_power_1_row.csv\", mode='w')"
       ],
       "id": "cr-3E5bEMC4d",
-      "execution_count": 416,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1205,7 +1205,7 @@
         "final_time_power1"
       ],
       "id": "zHlxBiBaZlgp",
-      "execution_count": 417,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1321,8 +1321,7 @@
       "metadata": {
         "id": "1SckxFfQMC4e",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "8d6801a6-da1d-49b8-bca9-3c869b9edb71"
       },
@@ -1341,7 +1340,7 @@
         "foreData"
       ],
       "id": "1SckxFfQMC4e",
-      "execution_count": 418,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1769,7 +1768,7 @@
         "#foreData.to_csv(\"weather_data_day.csv\", mode='w')"
       ],
       "id": "mFJ6kpbxMC4f",
-      "execution_count": 419,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1786,8 +1785,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Slyv4H4vcCEz",
         "outputId": "1fdaa351-d37c-43aa-87dd-1e233054b81a"
@@ -1798,7 +1796,7 @@
         "foreData"
       ],
       "id": "Slyv4H4vcCEz",
-      "execution_count": 420,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2222,7 +2220,7 @@
         "foreData1 = foreData.copy()"
       ],
       "id": "1Hc_A5JIMC4g",
-      "execution_count": 421,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2241,7 +2239,7 @@
         "    #print(num1, len(foreData1[foreData1[1].str.contains(num1)])"
       ],
       "id": "0hFpmHPo4TVi",
-      "execution_count": 422,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2253,7 +2251,7 @@
         "foreData1.drop(foreData1.loc[foreData1[1].str.contains(':30')].index, inplace=True)"
       ],
       "id": "KHwmDj3PVnGI",
-      "execution_count": 423,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2265,7 +2263,7 @@
         "#foreData1"
       ],
       "id": "Zj9sT0WEVr9r",
-      "execution_count": 424,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2310,7 +2308,7 @@
         "print(foreData5[foreData5[1].str.contains('2015-06-27 06:00') ==True].index)"
       ],
       "id": "U0f-1q5IkG6B",
-      "execution_count": 425,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2344,7 +2342,7 @@
         "# df = pd.DataFrame(foreData5.iloc[foreData5[foreData5[1].str.contains('2015-06-27 04:00') ==True].index[0]:foreData5[foreData5[1].str.contains('2015-06-27 06:00') ==True].index[0]+1])"
       ],
       "id": "bGvqhiKake4D",
-      "execution_count": 426,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2377,15 +2375,14 @@
         " 23: np.nan,24: np.nan,25: np.nan,26: np.nan},index=[52585])"
       ],
       "id": "WinX1JGzkr9H",
-      "execution_count": 427,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "uTcNlwQ9xUeo",
         "outputId": "5f70a806-2936-423d-9392-56e89a8a7d1a"
@@ -2404,7 +2401,7 @@
         "foreData1 = pd.concat([foreData1, df1]) \"\"\""
       ],
       "id": "uTcNlwQ9xUeo",
-      "execution_count": 428,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2444,7 +2441,7 @@
         "foreData1 = pd.concat([foreData1, df1]) "
       ],
       "id": "IyKiOh1hk5ol",
-      "execution_count": 429,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2488,7 +2485,7 @@
         "foreData1 = pd.concat([foreData1, df1]) "
       ],
       "id": "nC4Fr_7HlBSB",
-      "execution_count": 430,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2528,7 +2525,7 @@
         "foreData1 = pd.concat([foreData1, df1]) "
       ],
       "id": "3jCCb4Q9l0Dz",
-      "execution_count": 431,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2559,7 +2556,7 @@
         "foreData1 = pd.concat([foreData1, df1]) "
       ],
       "id": "dQBjKxuamBTZ",
-      "execution_count": 432,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2567,8 +2564,7 @@
       "metadata": {
         "id": "y-x_7NtRmrmK",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "83c9791c-17bd-4d17-fd19-cee6e44efcc1"
       },
@@ -2576,7 +2572,7 @@
         "foreData1"
       ],
       "id": "y-x_7NtRmrmK",
-      "execution_count": 433,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3007,7 +3003,7 @@
         "foreData1[28] = foreData1[1].str.split(' ').str[1]"
       ],
       "id": "MPyH9rb7YTxn",
-      "execution_count": 434,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3031,7 +3027,7 @@
         "foreData1[28] = pd.to_datetime(foreData1[28],format='%H:%M', errors='ignore') #time 형식으로 변환"
       ],
       "id": "4ivVOPpGnV0G",
-      "execution_count": 435,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3053,7 +3049,7 @@
         "foreData1=foreData1.sort_values(by=1) #datetime으로 정렬"
       ],
       "id": "4Rpj0P8unV4f",
-      "execution_count": 436,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3061,8 +3057,7 @@
       "metadata": {
         "id": "4HvOirqznV6f",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "c0daade8-7068-4120-96b5-47fc9d24e3a6"
       },
@@ -3072,7 +3067,7 @@
         "foreData1"
       ],
       "id": "4HvOirqznV6f",
-      "execution_count": 437,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3523,7 +3518,7 @@
         "foreData1.info()"
       ],
       "id": "FljoBd0co1Oc",
-      "execution_count": 438,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3590,7 +3585,7 @@
         "foreData1 = foreData1.drop(26,1)"
       ],
       "id": "Kd2ve8rko1Qg",
-      "execution_count": 439,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3606,7 +3601,7 @@
         "foreData1.info()"
       ],
       "id": "35pZ-ERQo1Sh",
-      "execution_count": 440,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3677,7 +3672,7 @@
         "  foreData1 = foreData1.drop(i,1)"
       ],
       "id": "6modk-W1sUBu",
-      "execution_count": 441,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3693,7 +3688,7 @@
         "foreData1.info()"
       ],
       "id": "3q296ZpWsUEC",
-      "execution_count": 442,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3753,7 +3748,7 @@
         "foreData1.columns = ['datetime','tem','rain','windSpeed','windDirect','humidity','vaporPressure','dewPoint','pressure','seaLevelPressure','sunshine','groundTem','date', 'time']"
       ],
       "id": "75LOIedWsUGP",
-      "execution_count": 443,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3775,7 +3770,7 @@
         "foreData1['windForce']=final_time_power1.iloc[:52584]"
       ],
       "id": "1-pVv1M1cBI0",
-      "execution_count": 444,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3787,7 +3782,7 @@
         "foreData1 = foreData1[['datetime','date', 'time','windForce','tem','rain','windSpeed','windDirect','humidity','vaporPressure','dewPoint','pressure','seaLevelPressure','sunshine','groundTem']]"
       ],
       "id": "iRMfrrYfsUI1",
-      "execution_count": 445,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3803,7 +3798,7 @@
         "foreData1.info()"
       ],
       "id": "UnNqGpfaa1B3",
-      "execution_count": 446,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3860,7 +3855,7 @@
         "#foreData1"
       ],
       "id": "jPtmCXaCa1EI",
-      "execution_count": 447,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3876,7 +3871,7 @@
         "foreData1.isnull().sum()"
       ],
       "id": "HV2m4wdFeKL7",
-      "execution_count": 448,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3933,7 +3928,7 @@
         "plt.show()"
       ],
       "id": "UhbSyrHKeKQq",
-      "execution_count": 452,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3959,7 +3954,7 @@
         "foreData1= foreData1.replace('', np.nan)"
       ],
       "id": "xxPP-b7AgWsr",
-      "execution_count": 453,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3993,7 +3988,7 @@
         "foreData2 = foreData1.copy()"
       ],
       "id": "v5c7yM3Xhjyu",
-      "execution_count": 474,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4018,7 +4013,7 @@
         "#foreData2['windSpeed'].fillna(method='pad',inplace=True) #바람"
       ],
       "id": "v-GZTc07jVRD",
-      "execution_count": 475,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4034,7 +4029,7 @@
         "foreData2.info()"
       ],
       "id": "SqoJtuo2kIR6",
-      "execution_count": 479,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4077,7 +4072,7 @@
         "foreData2.isnull().sum()"
       ],
       "id": "3MFIjNcc0Q_J",
-      "execution_count": 478,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4115,7 +4110,7 @@
         "foreData = foreData2.copy()"
       ],
       "id": "vS3bSTZ5gzuk",
-      "execution_count": 480,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4131,7 +4126,7 @@
         "foreData.info()"
       ],
       "id": "qnI2wpOygzwo",
-      "execution_count": 481,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4177,23 +4172,35 @@
         "id": "HwZofkJ3gzzV"
       },
       "source": [
-        "foreData.to_csv(\"preprocession_Data.csv\", mode='w')"
+        "foreData.to_csv(r'/content/gdrive/My Drive/Colab Notebooks/preprocessing_Data.csv', mode='w')"
       ],
       "id": "HwZofkJ3gzzV",
-      "execution_count": 482,
+      "execution_count": 486,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dK2D7fOi3AYw"
+        "id": "dK2D7fOi3AYw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f3979d27-e9aa-445c-ad8d-d812c5ecd90b"
       },
       "source": [
-        ""
+        "!pwd"
       ],
       "id": "dK2D7fOi3AYw",
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
